--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Zelp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
   </head>
   <body>
