--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,15 @@
     <link rel="manifest" href="/manifest.json" />
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
   </head>
+  <!-- Google tag (gtag.js) GOOGLE ANALYTICS -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WJG765M1F4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WJG765M1F4');
+</script>
   <body>
     <div id="root"></div>
   </body>
